# pypiles

./: .gitignore  Dockerfile  README.md  driver.py  pyproject.toml  railway.toml  server.py
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/api/: client.test.ts  client.ts  types.ts  websocket.ts
frontend/src/lib/components/config/: ConfigSummary.svelte  PlayerConfig.svelte
frontend/src/lib/components/game/: Card.svelte  CenterPile.svelte  EventLog.svelte  GameBoard.svelte  PlaybackControls.svelte  PlayerHand.svelte
frontend/src/lib/components/landing/: LandingModal.svelte
frontend/src/lib/components/results/: ActivityChart.svelte  GameSummaryCard.svelte  PlayerStatsTable.svelte  WinnerBanner.svelte
frontend/src/lib/stores/: gameStore.test.ts  gameStore.ts
frontend/src/lib/utils/: cardParser.test.ts  cardParser.ts  colors.test.ts  colors.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/game/[id]/: +page.svelte
frontend/src/routes/results/[id]/: +page.svelte
pypiles/: cards.py  characters.py  colors.py  db.py  deck.py  game.py  items.py  logger.py  logic.py  scoring.py  swap.py
pypiles/actors/: __init__.py  center_pile.py  event_collector.py  game_status.py  player.py
pypiles/strategies/: cautious.py  greedy.py  greedy_dep.py  protocol.py  random.py
tests/: conftest.py  test_cards.py  test_deck.py  test_event_collector.py  test_game.py  test_greedy.py  test_logic.py  test_scoring.py  test_server.py
